[gd_scene load_steps=10 format=3 uid="uid://dwq3twijmmpig"]

[ext_resource type="PackedScene" uid="uid://8yrjqan0dqfx" path="res://game/weapons/grenades/common/grenade_projectile.tscn" id="1_ua7bf"]
[ext_resource type="Texture2D" uid="uid://bah0mhat58x6x" path="res://game/weapons/grenades/flashbang/base.png" id="2_nfc8c"]
[ext_resource type="Script" path="res://game/weapons/grenades/flashbang/flashbang_projectile.gd" id="2_otq4k"]
[ext_resource type="Texture2D" uid="uid://nyuii0fx273c" path="res://game/menus/lobby/background.png" id="4_eddhq"]
[ext_resource type="AudioStream" uid="uid://dnce4ljo741pg" path="res://game/weapons/grenades/flashbang/explosion.wav" id="4_hj380"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8b4pb"]
radius = 480.0

[sub_resource type="Animation" id="Animation_vh1rv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Effect/White:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oxxvb"]
resource_name = "Stun"
length = 6.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_hj380")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Effect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Effect/White:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.752941), Color(1, 1, 1, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"unmute"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gc2tr"]
_data = {
&"RESET": SubResource("Animation_vh1rv"),
&"Stun": SubResource("Animation_oxxvb")
}

[node name="FlashbangProjectile" instance=ExtResource("1_ua7bf")]
script = ExtResource("2_otq4k")
unmute_duration = 2.25
stun_duration = 3.0
speed = 1800.0
damping = 600.0

[node name="StunArea" type="Area2D" parent="." index="0"]
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StunArea" index="0"]
shape = SubResource("CircleShape2D_8b4pb")
disabled = true

[node name="Grenade" parent="." index="1"]
texture = ExtResource("2_nfc8c")

[node name="Stun" type="CanvasLayer" parent="." index="5"]
layer = 10
visible = false

[node name="Effect" type="Control" parent="Stun" index="0"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Texture" type="TextureRect" parent="Stun/Effect" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_eddhq")
expand_mode = 1
stretch_mode = 6

[node name="White" type="ColorRect" parent="Stun/Effect" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Stun" index="1"]
libraries = {
&"": SubResource("AnimationLibrary_gc2tr")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Stun" index="2"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="6"]
rect = Rect2(-64, -64, 128, 128)

[node name="FreeTimer" type="Timer" parent="." index="7"]
wait_time = 6.0
one_shot = true

[node name="StunAreaTimer" type="Timer" parent="." index="8"]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="StunArea" to="." method="_on_stun_area_body_entered"]
[connection signal="timeout" from="FreeTimer" to="." method="safe_free"]
